# PJ-AG4

./: .gitignore  README.md  dashboard_template.html  main.py  progress.txt  pyproject.toml  requirements.txt  run.sh
.claude/: settings.local.json
docs/: final_improvements.md  llm_adaptive_strategy_plan.md  project_design.md  refactoring_plan.md
outputs/llm-experiments/final/: README.md  agent-summary.csv  final-summary.md  report.md  summary.csv
outputs/llm_scenario_experiments/: llm_context_engineered_seed7_r12_agent_summary.csv  llm_context_engineered_seed7_r12_report.md  llm_context_engineered_seed7_r12_summary.csv
outputs/llm_scenario_experiments/full_dataset/: README.md  aligned_llm_modes_seed7_r12_agent_summary.csv  aligned_llm_modes_seed7_r12_context_engineering_agent_summary.csv  aligned_llm_modes_seed7_r12_context_engineering_report.md  aligned_llm_modes_seed7_r12_report.md  (+7 more)
presentation/: demo_script.md  final_presentation.md
quant/: README.md  __init__.py  common.py  run_benchmarks.py  run_scenarios.py
reports/midterm/: PJ-AG4_人工智能导论中期汇报_填写版.docx  README.md  midterm_report.md
scripts/: generate_detailed_report.py
src/pj_ag4/: cli.py  config.py  contracts.py  dashboard.py  environment.py  io.py  reporting.py  simulation.py  visualization.py  web.py
src/pj_ag4.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config_env.py  test_dashboard.py  test_environment.py  test_llm_adaptive_agent.py  test_llm_agent.py  test_observation_builder.py  test_quant_scripts.py  test_simulation.py
(+159 files in other folders)
