[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pj-ag4"
version = "0.1.0"
description = "LLM-driven market and game simulation framework for PJ-AG4"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.8",
  "openai>=1.99,<3",
  "python-dotenv>=1.0,<2",
]

[project.scripts]
pj-ag4-run = "pj_ag4.cli:main"
pj-ag4-benchmark = "quant.run_benchmarks:main"
pj-ag4-scenarios = "quant.run_scenarios:main"

[tool.setuptools.package-dir]
pj_ag4 = "src/pj_ag4"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["pj_ag4*", "quant*"]
